Additional quickstart documentation and configuration.

--- a/src/site/apt/build.apt.vm
+++ b/src/site/apt/build.apt.vm
@@ -8,8 +8,11 @@ onebusaway-quickstart
   
 Quick-Start
 
-#set( $webapp_url = 'http://nexus.onebusaway.org/service/local/artifact/maven/content?r=snapshots&g=org.onebusaway&a=onebusaway-quickstart-assembly&c=webappl&e=war&v=' + ${currentVersion} )
-#set( $api_webapp_url = 'http://nexus.onebusaway.org/service/local/artifact/maven/content?r=snapshots&g=org.onebusaway&a=onebusaway-quickstart-assembly&c=api-webapp&e=war&v=' + ${currentVersion} )
+#if( $currentVersion.contains('SNAPSHOT') )
+  #set( $url = 'http://nexus.onebusaway.org/service/local/artifact/maven/content?r=snapshots&g=org.onebusaway&a=onebusaway-quickstart-assembly&c=full&e=war&v=' + ${currentVersion} )
+#else
+  #set( $url = 'http://nexus.onebusaway.org/content/repositories/public/org/onebusaway/onebusaway-quickstart-assembly/' + ${currentVersion} + '/onebusaway-quickstart-assembly-' + ${currentVersion} + '.war' )
+#end
 
   These instructions assume some comfort with the command-line in a Unix-like environment.  At a bare minimum, you'll need the {{{http://www.java.com/en/}Java}} installed on your system along with the OneBusAway quick-start distribution.
 
@@ -17,19 +20,18 @@ Quick-Start
   
   We'll use the OneBusAway quick-start app to build a transit data bundle: an optimized bundle of data built on top of the raw transit data designed to power the OneBusAway apps.  Once built, we spin up the most common webapps using the bundle.
   
-  [[1]] Download the right quickstart webapp for you:
-  
-    * The full webapp: {{{${webapp_url}}onebusaway-quickstart-assembly-webapp.war}} - Includes the {{{https://code.google.com/p/onebusaway/wiki/OneBusAwayRestApi}REST API} and web interface
-    
-    * The API-only webapp: {{{${api_webapp_url}}onebusaway-quickstart-assembly-api-webapp.war}} - Includes just the {{{https://code.google.com/p/onebusaway/wiki/OneBusAwayRestApi}REST API}}
+  [[1]] Download {{{${url}}onebusaway-quickstart-assembly.war}}
   
   [[1]] Make sure you have also downloaded the {{{http://code.google.com/transit/spec/transit_feed_specification.html}GTFS}} for your transit agency
   
-  [[1]] Run <<<java -Xmx1G -server -jar onebusaway-quickstart-assembly.war -build path/to/gtfs.zip path/to/created-transit-bundle>>>
+  [[1]] Run <<<java -jar onebusaway-quickstart-assembly.war -build path/to/gtfs.zip path/to/created-transit-bundle>>>
   
-  [[1]] Run <<< java -Xmx1G -server -jar onebusaway-quickstart-assembly.war -webapp path/to/created-transit-bundle>>>
+  [[1]] Run <<< java -jar onebusaway-quickstart-assembly.war -webapp path/to/created-transit-bundle>>>
   
   [[1]] Once the webapp has finished startup, browse to {{{http://localhost:8080/}http://localhost:8080/}}
   
   []
+
+  Depending on the size of your GTFS feed, you may need to specify a higher Java heap size (-Xmx500M or -Xmx1G).  If you optionally want to specify your own OSM data source, you can add the following command line option after <<<-build>>>:
   
+  * <<<-osm path/to/data.osm path/to/gtfs.zip>>>
