--- a/src/site/apt/index.apt.vm
+++ b/src/site/apt/index.apt.vm
@@ -1,35 +1,52 @@
 onebusaway-quickstart
 
-  We have a quick-start distribution designed to get you quickly up and running with OneBusAway.  This can be a good way to evaluate OneBusAway without getting bogged down in more complex deployment scenarios. 
+  We have a quick-start distribution designed to get you quickly up and running with the OneBusAway application suite.
+This can be a good way to evaluate OneBusAway without getting bogged down in more complex deployment scenarios. 
   
-  <<Current Version:>> ${currentVersion}
+  <<Quickstart Version:>> ${currentVersion}
+  <<OneBusAway Version:>> {{{../../onebusaway-application-modules/${onebusaway_version}/index.html}${onebusaway_version}}}
   
-  This quick-start guide is targeted to OneBusAway version ${onebusaway_version}.  To get started, follow these instructions:
+* What is OneBusAway?
+
+  The OneBusAway application suite is a set of tools to help share real-time public transit information with riders
+across a variety of interfaces.  It includes interfaces for the web, phone, sms, large sign displays, and a REST API
+that powers a number of mobile applications.  For more information on these features, see the
+{{{../../onebusaway-application-modules/${onebusaway_version}/index.html}application suite documentation}}.
   
-Quick-Start
+* Quick-Start
+
+** Prerequisites
+
+  At a bare minimum, you'll need {{{http://www.java.com/en/}Java}} installed on your system along.
+
+** Transit Data
+
+  You will need transit data to power your OneBusAway installation.  At minimum, you'll need
+{{{http://code.google.com/transit/spec/transit_feed_specification.html}GTFS}} static schedule data feed for your target
+transit agency.  Optionally, but ideally, you will also need real-time data for your transit agency.  OneBusAway
+supports real-time data for delays, service alerts, and vehicle positions in the
+{{{http://code.google.com/transit/realtime/}GTFS-realtime}} format or the {{{http://siri.org.uk/}SIRI}} format.
+
+** Download a Quickstart Bundle
 
 #set( $webapp_url = 'http://nexus.onebusaway.org/service/local/artifact/maven/content?r=snapshots&g=org.onebusaway&a=onebusaway-quickstart-assembly&c=webapp&e=war&v=' + ${currentVersion} )
 #set( $api_webapp_url = 'http://nexus.onebusaway.org/service/local/artifact/maven/content?r=snapshots&g=org.onebusaway&a=onebusaway-quickstart-assembly&c=api-webapp&e=war&v=' + ${currentVersion} )
 
-  These instructions assume some comfort with the command-line in a Unix-like environment.  At a bare minimum, you'll need the {{{http://www.java.com/en/}Java}} installed on your system along with the OneBusAway quick-start distribution.
-
-  You also need data.  At minimum, you'll need {{{http://code.google.com/transit/spec/transit_feed_specification.html}GTFS}} static schedule data feed for your target transit agency.  Optionally, you can also supply {{{http://www.openstreetmap.org/}Open Street Map}} data for your area.  We will automatically download OSM for your area by default, but this can be a bit slow (in the <<<otp_graph>>> phase), so if you already have an OSM file for your region, things can go much faster.
+  You need to download one of the quickstart bundles.  Pick a bundle based on what features you are interested in:  
   
-  We'll use the OneBusAway quick-start app to build a transit data bundle: an optimized bundle of data built on top of the raw transit data designed to power the OneBusAway apps.  Once built, we spin up the most common webapps using the bundle.
-  
-  [[1]] Download the right quickstart webapp for you:
-  
-    * The full webapp: {{{${webapp_url}}onebusaway-quickstart-assembly-webapp.war}} - Includes the {{{https://code.google.com/p/onebusaway/wiki/OneBusAwayRestApi}REST API}} and web interface
+    * The full webapp: {{{${webapp_url}}onebusaway-quickstart-assembly-webapp.war}} - Includes the {{{../../onebusaway-application-modules/${onebusaway_version}/api/where/index.html}REST API}} and {{{../../onebusaway-application-modules/${onebusaway_version}/features/web.html}the web interfaces}}
     
-    * The API-only webapp: {{{${api_webapp_url}}onebusaway-quickstart-assembly-api-webapp.war}} - Includes just the {{{https://code.google.com/p/onebusaway/wiki/OneBusAwayRestApi}REST API}}
+    * The API-only webapp: {{{${api_webapp_url}}onebusaway-quickstart-assembly-api-webapp.war}} - Includes just the {{{../../onebusaway-application-modules/${onebusaway_version}/api/where/index.html}REST API}}
+
+** Build a Transit Data Bundle
+
+  We'll use the OneBusAway quick-start app to build a transit data bundle: an optimized bundle of data built on top of the raw transit data designed to power the OneBusAway apps.  Once built, we spin up the most common webapps using the bundle.  
   
-  [[1]] Make sure you have also downloaded the {{{http://code.google.com/transit/spec/transit_feed_specification.html}GTFS}} for your transit agency
+  Run <<<java -Xmx1G -server -jar onebusaway-quickstart-assembly.war -build path/to/gtfs.zip path/to/created-transit-bundle>>>
   
-  [[1]] Run <<<java -Xmx1G -server -jar onebusaway-quickstart-assembly.war -build path/to/gtfs.zip path/to/created-transit-bundle>>>
+** Run the Webapp
+
+  Run <<< java -Xmx1G -server -jar onebusaway-quickstart-assembly.war -webapp path/to/created-transit-bundle>>>
   
-  [[1]] Run <<< java -Xmx1G -server -jar onebusaway-quickstart-assembly.war -webapp path/to/created-transit-bundle>>>
-  
-  [[1]] Once the webapp has finished startup, browse to {{{http://localhost:8080/}http://localhost:8080/}}
-  
-  []
+  Once the webapp has finished startup, browse to {{{http://localhost:8080/}http://localhost:8080/}}
   
