--- a/src/site/apt/release-notes.apt.vm
+++ b/src/site/apt/release-notes.apt.vm
@@ -2,6 +2,10 @@ Release Notes
 
 * ${currentVersion}
 
+  * Full Documentation: {{${site_base_url}/onebusaway-gtfs-modules/${currentVersion}/}}
+  
+* 1.0.1
+
   * Initial Release
 
-  * Full Documentation: {{${site_base_url}/onebusaway-gtfs-modules/${currentVersion}/}}
+  * Full Documentation: {{${site_base_url}/onebusaway-gtfs-modules/1.0.1/}}
